--- a/bin/gainos_tk/tc1797/Project/.project
+++ b/bin/gainos_tk/tc1797/Project/.project
@@ -39,6 +39,11 @@
 			<locationURI>GAINOS_BD/include</locationURI>
 		</link>
 		<link>
+			<name>mcal</name>
+			<type>2</type>
+			<locationURI>GAINOS_BD/mcal</locationURI>
+		</link>
+		<link>
 			<name>osek</name>
 			<type>2</type>
 			<locationURI>GAINOS_BD/osek</locationURI>
